# macha

./: .gitignore  DATABASE_COMMANDS.md  README.md  config.yaml  config_dev.yaml  macha.service  pyproject.toml  requirements.txt
.github/workflows/: pr.yml  release.yml
scripts/: check_db.sh  check_lsm6ds.py  db_summary.py  db_visualize.py  deploy.sh  install_pi_deps.sh  setup.sh  setup_dev.sh  setup_tpu.sh
src/: ai_task.py  baro_task.py  camera_task.py  config.py  database.py  imu_task.py  logger.py  main.py  metrics_task.py  mock_ai_task.py  mock_baro_task.py  mock_camera_task.py  mock_imu_task.py  mock_metrics_task.py  picamera2_task.py  scheduler.py  task.py
tests/: test_ai_task.py  test_config.py  test_database.py  test_imports.py  test_logger.py  test_main.py  test_mock_baro.py  test_mock_camera.py  test_mock_camera_unit.py  test_mock_imu.py  test_mock_integration.py  test_mock_metrics.py  test_scheduler.py  test_sensor_tasks.py
