[project]
name = "macha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
    "colorlog>=6.8.2",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "psutil>=6.1.0",
    "pydantic>=2.0.0",
    "picamera2>=0.3.27",
    "ruff>=0.11.13",
    "adafruit-blinka>=8.0.0",
    "adafruit-circuitpython-bmp3xx>=1.3.0",
    "adafruit-circuitpython-lsm6ds>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
]
[tool.uv.pip]
break-system-packages = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_file = "CHANGELOG.md"
changelog_format = "markdown"

[tool.commitizen.settings]
use_shortcuts = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
